--- a/hi.html
+++ b/hi.html
@@ -5,4 +5,4 @@
 <h1><a href="https://www.babson.edu/" target="_blank">Babson College</a> #2
     Business School renowned for its programs 
 </h1>
-<p><a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Ronaldo</a> is the best player. </p>
+<p><a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo" target="_blank">Ronaldo</a> is the best player. </p>
