--- a/EX-04.html
+++ b/EX-04.html
@@ -17,7 +17,15 @@
       text-align: left;
       size: 22px;
     }
-   
+    h3 {
+      color: #E6E6FA;
+      font-family: Verdana, sans-serif;
+      text-align: right;
+      size: 18px;
+    }
+    p {
+      font-family: "Comic Sans MS", sans-serif;
+    }   
     
   </style>
   <body>
