9 Sept, Ex-07 and Sitemap

--- a/ex06.html
+++ b/ex06.html
@@ -6,77 +6,12 @@
     <title>Exercise 04</title>
   </head>
   <style>
-    h1 {
-      color: navy;
-      font-family: Gill Sans, sans-serif;
+    .link {
+      background-color: lightblue;
       text-align: center;
     }
-
-    h2 {
-      color: #48D1CC;
-      font-family: Arial;
-      text-align: left;
-      size: 22px;
-    }
-
-    h3 {
-      color: #E6E6FA;
-      font-family: Verdana, sans-serif;
-      text-align: right;
-      size: 18px;
-    }
-
-      .green-heading {
-        color: green;
-      }
-
-    p {
-      font-family: "Comic Sans MS", sans-serif;
-    }
-
-    .blue-italic-underline {
-      color: blue;
-      font-style: italic;
-      text-decoration: underline;
-      text-align: center;
-    }
-
-    .quote-one-section {
-      background-color: yellow;
-      padding: 10px;
-    }
-    .big-letter {
-      font-size: 1.5em;
-    }
-    
-    .quote-two-section {
-      background-color: green;
-      padding: 10px;
-    }
-
-    .quote-three-section {
-      background-color: lime;
-      padding: 10px;
-    }
-
-    #last-quote {
-      border: 3px dotted red;
-      padding: 10px;
-    }
-    /* #Quote-Three {
-      color:green;
-    } */
-
-    .tiger-img {
-  float: left;
-  margin-right: 10px;
-    }
-
-    .big-letter {
-  font-size: 1.5em;
-    }
-
   </style>
+  <link rel="stylesheet" href="styles/ex07.css">
   <body>
     <h1>This line demonstrates h1</h1>
     <h2>This line demonstrates h2</h2>
@@ -139,5 +74,8 @@
       estimated at less than 1,184,911 km2 (457,497 sq mi), a 41% decline from
       the area estimated in the mid-1990s.[7]
     </p>
+    <a class="link" href="https://en.wikipedia.org/wiki/Winston_Churchill" target="_blank"
+        >Winston Churchill 
+</a>
   </body>
 </html>
