Ex-06,Ex-07 & Homework-1

--- a/sitemap.html
+++ b/sitemap.html
@@ -6,8 +6,16 @@
     <title>Exercise 04</title>
   </head>
   <body>
-    <h1>
-      <a href="ex06.html"> This is the Ex-06 page </a>
-    </h1>
+    <h1>These are the Exercise of the WebTech Class:</h1>
+        <ol>
+      <li><a href="Class-05.html">Class 5</a></li>
+      <li><a href="Class-06.html">Class 6</a></li>
+      <li><a href="ex06.html">Exercise 6</a></li>
+      <li><a href="ex-07.html">Exercise 7</a></li>
+      <li><a href="EX-03.html">Exercise 3</a></li>
+      <li><a href="EX-04.html">Exercise 4</a></li>
+      <li><a href="hello.html">Hello file</a></li>
+      <li><a href="hi.html">Hi File</a></li>
+    </ol>
   </body>
 </html>
