--- a/ex-07.html
+++ b/ex-07.html
@@ -5,77 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Exercise 04</title>
   </head>
-  <style>
-    h1 {
-      color: navy;
-      font-family: Gill Sans, sans-serif;
-      text-align: center;
-    }
-
-    h2 {
-      color: #48d1cc;
-      font-family: Arial;
-      text-align: left;
-      size: 22px;
-    }
-
-    h3 {
-      color: #e6e6fa;
-      font-family: Verdana, sans-serif;
-      text-align: right;
-      size: 18px;
-    }
-
-    .green-heading {
-      color: green;
-    }
-
-    p {
-      font-family: "Comic Sans MS", sans-serif;
-    }
-
-    .blue-italic-underline {
-      color: blue;
-      font-style: italic;
-      text-decoration: underline;
-      text-align: center;
-    }
-
-    .quote-one-section {
-      background-color: yellow;
-      padding: 10px;
-    }
-    .big-letter {
-      font-size: 1.5em;
-    }
-
-    .quote-two-section {
-      background-color: green;
-      padding: 10px;
-    }
-
-    .quote-three-section {
-      background-color: lime;
-      padding: 10px;
-    }
-
-    #last-quote {
-      border: 3px dotted red;
-      padding: 10px;
-    }
-    /* #Quote-Three {
-      color:green;
-    } */
-
-    .tiger-img {
-      float: left;
-      margin-right: 10px;
-    }
-
-    .big-letter {
-      font-size: 1.5em;
-    }
-  </style>
+  <link rel="stylesheet" href="styles/ex07.css">
   <body>
     <h1>This line demonstrates h1</h1>
     <h2>This line demonstrates h2</h2>
@@ -119,7 +49,7 @@
     </div>
 
     <hr />
-    <p class="blue-italic-underline" style="color: purple">
+    <p class="blue-italic-underline" style="color: purple" font-size="18px">
       The tiger (Panthera tigris) is the largest cat species, reaching a total
       body length of up to 3.3 metres (11 ft) and weighing up to 306 kg (670
       lb). It is the third largest land carnivore (behind only the Polar bear
