About Me Page - HW 1

--- a/Homework-1/About-me.html
+++ b/Homework-1/About-me.html
@@ -2,10 +2,63 @@
 <html>
   <head>
     <title>Rishit Khinduka Homework 1 - About Me Page</title>
-        <meta charset="UTF-8" />
+    <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  </head>
- 
-  <body> 
+  <style>
+    h2 {
+      color: #4c057b;
+      font-family:sans-serif;
+      text-align: center;
+      text-decoration: underline;
+      size: 22px;
+    }
+    p {
+      font-family: "Times New Roman", serif;
+      font-size: 18px;
+      text-align: center;
+      margin: 20px;
+    }
+    img {
+      display: block;
+      margin: auto;
+    }
+  </style>
+</head>
+
+  <body>
     <h2>About Me: Rishit Khinduka</h2>
-    
+    <hr />
+    <p>
+      My name is Rishit and I am a senior at Babson College. I spent the initial
+      years of my childhood in Japan and soon shifted back to India for
+      schooling. Although at the time it seemed like a big shift, studying in
+      India has not only allowed me to learn and grasp knowledge properly, but
+      also presented me with the opportunity to stay connected to my roots. Soon
+      came the time to decide and plan my future, and that is when I applied to
+      Babson and got accepted. 
+        </p> 
+      <p>
+      Looking back, I chose this university due to its
+      esteemed reputation for being the #1 entrepreneurship school in the world.
+      Hence, I wanted to gain in-depth knowledge of not only how to create a
+      business but also manage existing business like my family business. Given
+      my grand aspirations after graduating this December, I believe the
+      knowledge and the experience will allow me to prosper in fulfilling my
+      future endeavours of starting a Real Estate company, while also growing my
+      family jewelry business.
+      </p>
+     
+    <img
+      src="https://www.babson.edu/media/babson/assets/sports-camps/babsontest.jpg"
+      alt="Babson College Campus"
+      width="600"
+    />
+        <p><a href="https://www.babson.edu/" target="_blank"
+        >Babson College</a>
+    </p>
+    <hr />
+    <p>Back to <a href="index-manual.html" target="_blank"
+        >Homework 1 - Manual Index Page</a> 
+    </p>
+  </body>
+</html>
