--- a/Class-06.html
+++ b/Class-06.html
@@ -16,6 +16,15 @@
             padding: 10px;
             text-align: center;
         }
+
+        tr:nth-child(even) {
+            background-color: lightgray;
+        }
+
+        tr:hover {
+            background-color: green;
+        }
+
     </style>
   </head>
   <body>
