--- a/Homework-1/About-me.html
+++ b/Homework-1/About-me.html
@@ -4,7 +4,8 @@
     <title>Rishit Khinduka Homework 1 - About Me Page</title>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <style>
+    <link rel="stylesheet" href="Style-for-index-manual.css">
+<!-- <style>
     h2 {
       color: #4c057b;
       font-family:sans-serif;
@@ -22,7 +23,7 @@
       display: block;
       margin: auto;
     }
-  </style>
+  </style> -->
 </head>
 
   <body>
