--- a/Class-07.html
+++ b/Class-07.html
@@ -13,6 +13,10 @@
     display: block;
     margin: 0 auto;
   }
+  a:hover {
+    color: red;
+  } changes to red when hovered over
+
 </style>
 </head>
 
@@ -20,6 +24,11 @@
     <h2>Class-07</h2>
 <iframe class=".center-img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.129999012183!2d-71.26749512437428!3d42.29709147119878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e381418b1914ef%3A0x4ef71f3899e76a89!2sBabson%20College!5e0!3m2!1sen!2sus!4v1758053390790!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></iframe>
 <p>Babson College</p>
+
+<p><a href="https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_div_test" target="_blank">Try HTML Div Example</a>
+</p>
+<hr>
+
 <video src=""></video>
 
     </body> 
