--- a/Homework-1/My Interests.html
+++ b/Homework-1/My Interests.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rishit Khinduka Homework 1 - About Me Page</title>
+    <title>Rishit Khinduka Homework 1 - Interests Page</title>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-<style>
+<link rel="stylesheet" href="Style-for-index-manual.css">
 
-    h2 {
+    <!-- <style>
+
+    /* h2 {
       color: #c55307;
       font-family:sans-serif;
       text-align: center;
@@ -18,9 +20,9 @@
     img {
       display: block;
       margin: auto;
-    }
+    } */
     
-  </style>  
+  </style>   -->
 </head>
   <body>
     <h2>My Interests</h2>
