--- a/Homework-1/index-manual.html
+++ b/Homework-1/index-manual.html
@@ -8,7 +8,7 @@
   </head>
  
   <body>
-    
+       <img src="/Images/homepage.jpg" alt="Home" style="width:200px;"> 
     <h2>Homework 1 - Manual Index Page</h2>
     <h2>These are the Exercise of the WebTech Class:</h2>
     <div class="links">
@@ -18,10 +18,10 @@
       <li><a href="Contact.html">Contact</a></li>
       <li><a href="Portfolio.html">Portfolio</a></li>
     </ol> -->
-<p><a href="About-me.html">About Me</a></p>
-<p><a href="My Interests.html">My Interests</a></p>
-<p><a href="Contact.html">Contact</a></p>
-<p><a href="Portfolio.html">Portfolio</a></p>
+<p><a href="About-me.html" target="_blank">About Me</a></p>
+<p><a href="My Interests.html" target="_blank">My Interests</a></p>
+<p><a href="Contact.html" target="_blank">Contact</a></p>
+<p><a href="Portfolio.html" target="_blank">Portfolio</a></p>
     </div>
   </body>
 </html>
