--- a/Homework-1/Portfolio.html
+++ b/Homework-1/Portfolio.html
@@ -10,16 +10,16 @@
     <h1>Work done in WebTech by Rishit Khinduka:</h1>
     <hr>
         <ol>
-      <li><a href="Class-05.html">Class 5</a></li>
-      <li><a href="Class-06.html">Class 6</a></li>
-      <li><a href="ex06.html">Exercise 6</a></li>
-      <li><a href="ex-07.html">Exercise 7</a></li>
-      <li><a href="EX-03.html">Exercise 3</a></li>
-      <li><a href="EX-04.html">Exercise 4</a></li>
-      <li><a href="hello.html">Hello file</a></li>
-      <li><a href="hi.html">Hi File</a></li>
-      <li><a href="Class-07.html">Class 7</a></li>
-      <li><a href="Class-08.html">Class 8</a></li>
+      <li><a href="../Class-05.html">Class 5</a></li>
+      <li><a href="../Class-06.html">Class 6</a></li>
+      <li><a href="../ex06.html">Exercise 6</a></li>
+      <li><a href="../ex-07.html">Exercise 7</a></li>
+      <li><a href="../EX-03.html">Exercise 3</a></li>
+      <li><a href="../EX-04.html">Exercise 4</a></li>
+      <li><a href="../hello.html">Hello file</a></li>
+      <li><a href="../hi.html">Hi File</a></li>
+      <li><a href="../Class-07.html">Class 7</a></li>
+      <li><a href="../Class-08.html">Class 8</a></li>
     </ol>
     <!-- none of the files are working in the above lists  -->
     <hr>
