EX-09 and Class-09

--- a/sitemap.html
+++ b/sitemap.html
@@ -16,6 +16,12 @@
       <li><a href="EX-04.html">Exercise 4</a></li>
       <li><a href="hello.html">Hello file</a></li>
       <li><a href="hi.html">Hi File</a></li>
+      <li><a href="Class-07.html">Class 7</a></li>
+      <li><a href="Class-08.html">Class 8</a></li
+      <li><a href="EX-09.html">Exercise 9</a></li>
+      <li><a href="Class-09.html">Class 9</a></li>
+      <li><a href="Homework-1/Portfolio.html">Portfolio Page</a></
+        
     </ol>
   </body>
 </html>
