hw2-index.html done

--- a/hw2-docs/HW2-index.html
+++ b/hw2-docs/HW2-index.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Rishit Khinduka's Portfolio Website">
   <title>Rishit Khinduka - Portfolio</title>
-  <link rel="stylesheet" href="styles/hw2-styles.css">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="hw2-styles.css">
+  <!-- <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png"> -->
+<!-- <link rel="icon" type="image/png" href="images/favicon-32x32.png"> -->
+<link rel="icon" href="favicon.io">
 </head>
 <body>
   <header>
     <div class="header-container">
-      <img src="images/homepage.jpg" alt="Logo" class="logo">
+      <img src="favicon-32x32.png" alt="Logo" class="logo">
       <h1 class="site-title">Rishit Khinduka</h1>
     </div>
     <nav class="navbar">
