--- a/hw2-docs/HW2-index.html
+++ b/hw2-docs/HW2-index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Rishit Khinduka's Portfolio Website">
-  <title>Rishit Khinduka - Portfolio</title>
+  <title>Rishit Khinduka - Index(home) page</title>
   <link rel="stylesheet" href="hw2-styles.css">
   <!-- <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png"> -->
 <!-- <link rel="icon" type="image/png" href="images/favicon-32x32.png"> -->
@@ -12,19 +12,16 @@
 </head>
 <body>
   <header>
-    <div class="header-container">
-      <img src="favicon-32x32.png" alt="Logo" class="logo">
-      <h1 class="site-title">Rishit Khinduka</h1>
-    </div>
+    <img src="apple-touch-icon.png" alt="Logo" class="logo" />
+    <h1 class="site-title">Rishit Khinduka</h1>
     <nav class="navbar">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="HW2-index.html" class="active">Home</a></li>
+        <li><a href="HW2-projects.html">Projects</a></li>
+        <li><a href="HW2-contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
-
   <main>
     <section class="intro">
       <h2>Welcome!</h2>
