--- a/hw2-docs/HW2-projects-ai.html
+++ b/hw2-docs/HW2-projects-ai.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Projects by Rishit Khinduka" />
-  <title>sRishit Khinduka - Projects</title>
-  <link rel="stylesheet" href="hw2-styles.css">
-<link rel="icon" href="favicon.io">
+  <title>Rishit Khinduka - Projects</title>
+  <link rel="stylesheet" href="hw2-styles-ai.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 <body>
-  <header>
+  <header class="hero">
     <img src="apple-touch-icon.png" alt="Logo" class="logo" />
     <h1 class="site-title">Rishit Khinduka</h1>
     <nav class="navbar">
@@ -24,13 +24,11 @@
   <main>
     <section class="projects-section">
       <h2>My Projects</h2>
-        <p>I have been managing my family business's instagram page for
-             a while now. Here are some of the projects I've 
-             worked on recently:</p>
-      <div class="project-grid">
+      <p>I have been managing my family business's instagram page for a while now. Here are some of the projects I've worked on recently:</p>
 
+      <div class="project-grid">
         <article class="project-card">
-        <img src="1.png" alt="Project 1 - Red Diamond" class="project-img"/>
+          <img src="1.png" alt="Project 1 - Red Diamond" class="project-img"/>
           <h3>Red Diamond</h3>
           <p>Nature's rarest red, crafter over a million years.</p>
           <a href="https://www.instagram.com/vn.trading?igsh=MWxzYW9wc2tndWZ6bA%3D%3D&utm_source=qr" class="project-link">View Page</a>
@@ -68,7 +66,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Rishit Khinduka. All rights reserved.</p>
+    <p>© 2025 Rishit Khinduka. All rights reserved.</p>
   </footer>
 </body>
 </html>
