--- a/hw2-docs/HW2-contact-ai.html
+++ b/hw2-docs/HW2-contact-ai.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Projects by Rishit Khinduka" />
-  <title>sRishit Khinduka - Projects</title>
-  <link rel="stylesheet" href="hw2-styles.css">
-<link rel="icon" href="favicon.io">
+  <title>Rishit Khinduka - Contact</title>
+  <link rel="stylesheet" href="hw2-styles-ai.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 <body>
-  <header>
+  <header class="hero">
     <img src="apple-touch-icon.png" alt="Logo" class="logo" />
     <h1 class="site-title">Rishit Khinduka</h1>
     <nav class="navbar">
