--- a/Classwork/sitemap.html
+++ b/Classwork/sitemap.html
@@ -20,7 +20,9 @@
       <li><a href="Class-08.html">Class 8</a></li
       <li><a href="EX-09.html">Exercise 9</a></li>
       <li><a href="Class-09.html">Class 9</a></li>
-      <li><a href="Homework-1/Portfolio.html">Portfolio Page</a></
+      <li><a href="Homework-1/Portfolio.html">Portfolio Page</a></li>
+      <li><a href="Ex-15.html">Exercise 15</a></li>
+
         
     </ol>
   </body>
