--- a/Ex-18.html
+++ b/Ex-18.html
@@ -104,3 +104,5 @@
     </script>
   </body>
 </html>
+
+// Imp things for the quiz: for( let i = 0, i < colors.length; i++) { console.log(colors[i].value)}, End: .push(Add at end), .pop( Remove at end), .shift(Remove at start), .unshift(Add at start)
