--- a/Recipe_index.html
+++ b/Recipe_index.html
@@ -100,7 +100,7 @@
       </div>
 
       <div class="card" aria-hidden="false">
-        <img src="Classwork/Images/homepage.jpg" alt="Assorted easy dishes" />
+        <img src="" alt="Assorted easy dishes" />
       </div>
     </section>
 
