--- a/Recipe_index.html
+++ b/Recipe_index.html
@@ -1,151 +1,310 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Easy Dorm Recipes — Home</title>
+
   <style>
-    :root{
-      --bg:#ffffff; --card:#ffffff; --text:#0f1724; --muted:#6b7280; --accent:#d97706;
-      --shadow: 0 10px 30px rgba(2,6,23,0.08);
-      --focus: rgba(37,99,235,0.14);
-      --radius:12px;
-      --maxw:1100px;
-      --gap:1rem;
+    /* --------------------------------------------------------
+       THEME VARIABLES (light + dark mode)
+    -------------------------------------------------------- */
+    :root {
+      --bg: #ffffff;
+      --card: #ffffff;
+      --text: #1a1a1a;
+      --muted: #6b7280;
+      --accent: #d97706;
+      --shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+      --radius: 10px;
+      --max-width: 1000px;
     }
-    :root.dark{
-      --bg:#071023; --card:#071428; --text:#e6eef8; --muted:#9aa6b2; --accent:#f59e0b;
-      --shadow: 0 10px 30px rgba(3,6,12,0.6);
+
+    /* Dark mode variables override */
+    :root.dark {
+      --bg: #0f172a;
+      --card: #1e293b;
+      --text: #e2e8f0;
+      --muted: #94a3b8;
+      --shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
     }
-    html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;color:var(--text);background:var(--bg);-webkit-font-smoothing:antialiased}
-    .large-text{font-size:1.125rem}
-    .container{max-width:var(--maxw);margin:0 auto;padding:1rem}
-    header.site-header{background:var(--card);position:sticky;top:0;z-index:40;border-bottom:1px solid rgba(0,0,0,0.06)}
-    .header-inner{display:flex;align-items:center;justify-content:space-between;gap:.75rem;max-width:var(--maxw);margin:0 auto;padding:.75rem 1rem}
-    .brand{font-weight:700;color:var(--accent);font-size:1.2rem}
-    nav ul{display:flex;gap:.5rem;list-style:none;padding:0;margin:0}
-    nav a{display:inline-block;padding:.5rem .7rem;border-radius:8px;text-decoration:none;color:var(--text)}
-    nav a:hover, nav a:focus{box-shadow:0 0 0 4px var(--focus)}
-    .toggles{display:flex;gap:.5rem;align-items:center}
-    .switch{position:relative;width:46px;height:26px}
-    .switch input{display:none}
-    .slider{position:absolute;left:0;right:0;top:0;bottom:0;background:#ddd;border-radius:40px}
-    .slider:before{content:"";position:absolute;left:3px;top:3px;width:20px;height:20px;border-radius:50%;background:white;transition:transform .18s}
-    .switch input:checked + .slider{background:#4b5563}
-    .switch input:checked + .slider:before{transform:translateX(20px)}
-    main{padding:2rem 1rem}
-    .hero{display:grid;grid-template-columns:1fr 420px;gap:2rem;align-items:start}
-    .hero .card{background:var(--card);border-radius:var(--radius);padding:1.25rem;box-shadow:var(--shadow);border:1px solid rgba(0,0,0,0.04)}
-    .hero h1{margin:.25rem 0;font-size:2rem}
-    .lead{color:var(--muted);line-height:1.4}
-    .hero img{width:100%;height:100%;object-fit:cover;border-radius:8px;display:block}
-    /* Contact placeholder */
-    .contact-box{margin-top:2rem;padding:1.25rem;border-radius:var(--radius);box-shadow:var(--shadow);background:var(--card);border:1px solid rgba(0,0,0,0.04)}
-    .contact-box h3{margin-top:0}
-    footer{padding:1rem;text-align:center;color:var(--muted)}
-    /* responsive */
-    @media (max-width:920px){
-      .hero{grid-template-columns:1fr}
-      .hero img{height:260px}
+
+    /* --------------------------------------------------------
+       GLOBAL STYLES
+    -------------------------------------------------------- */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
     }
-    @media (max-width:520px){
-      .header-inner{padding:.5rem}
-      nav ul{display:none}
-      .mobile-nav-btn{display:inline-block}
+
+    .large-text {
+      font-size: 1.15rem;
     }
-    /* small utility */
-    .muted{color:var(--muted)}
-    .btn{background:var(--accent);color:white;padding:.5rem .75rem;border-radius:8px;border:0;cursor:pointer}
-    .btn.ghost{background:transparent;border:1px solid rgba(0,0,0,0.06);color:var(--text)}
-    a.skip{position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden}
-    a.skip:focus{left:12px;top:12px;width:auto;height:auto;padding:.5rem .75rem;background:var(--accent);color:white;border-radius:6px}
+
+    .container {
+      max-width: var(--max-width);
+      margin: auto;
+      padding: 1rem;
+    }
+
+    /* --------------------------------------------------------
+       NAVIGATION BAR
+    -------------------------------------------------------- */
+    header {
+      background: var(--card);
+      box-shadow: var(--shadow);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+
+    .nav-inner {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0.75rem 1rem;
+    }
+
+    nav ul {
+      display: flex;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      gap: 0.75rem;
+    }
+
+    nav a {
+      text-decoration: none;
+      padding: 0.5rem 0.75rem;
+      border-radius: 6px;
+      color: var(--text);
+    }
+
+    nav a:hover {
+      background: rgba(0, 0, 0, 0.08);
+    }
+
+    /* Dark mode switch */
+    .switch {
+      width: 40px;
+      height: 22px;
+      position: relative;
+    }
+
+    .switch input {
+      display: none;
+    }
+
+    .slider {
+      position: absolute;
+      inset: 0;
+      background: #ccc;
+      border-radius: 20px;
+    }
+
+    .slider::before {
+      content: "";
+      position: absolute;
+      width: 18px;
+      height: 18px;
+      background: white;
+      border-radius: 50%;
+      top: 2px;
+      left: 2px;
+      transition: 0.2s;
+    }
+
+    .switch input:checked + .slider {
+      background: #4b5563;
+    }
+
+    .switch input:checked + .slider::before {
+      transform: translateX(18px);
+    }
+
+    .toggle-row {
+      display: flex;
+      align-items: center;
+      gap: 0.75rem;
+    }
+
+    /* --------------------------------------------------------
+       HERO SECTION
+    -------------------------------------------------------- */
+    .hero {
+      display: grid;
+      grid-template-columns: 1fr 350px;
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+
+    .card {
+      background: var(--card);
+      padding: 1.25rem;
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+    }
+
+    .hero img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: var(--radius);
+    }
+
+    .lead {
+      color: var(--muted);
+      line-height: 1.5;
+    }
+
+    /* --------------------------------------------------------
+       CONTACT PLACEHOLDER
+    -------------------------------------------------------- */
+    .contact-box input,
+    .contact-box textarea {
+      width: 100%;
+      padding: 0.5rem;
+      border-radius: var(--radius);
+      border: 1px solid #ccc;
+      margin-bottom: 0.75rem;
+    }
+
+    .btn {
+      background: var(--accent);
+      border: none;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: var(--radius);
+      cursor: pointer;
+    }
+
+    /* --------------------------------------------------------
+       RESPONSIVE
+    -------------------------------------------------------- */
+    @media (max-width: 800px) {
+      .hero {
+        grid-template-columns: 1fr;
+      }
+    }
   </style>
 </head>
+
 <body>
-  <a href="#main" class="skip">Skip to content</a>
-  <header class="site-header">
-    <div class="header-inner container" role="banner">
-      <div style="display:flex;align-items:center;gap:.75rem">
-        <div class="brand">Easy Dorm Recipes</div>
-        <nav aria-label="Main navigation">
-          <ul>
-            <li><a href="Recipe_index.html">Home</a></li>
-            <li><a href="Recipe_breakfast.html">Breakfast</a></li>
-            <li><a href="Recipe_lunch.html">Lunch</a></li>
-            <li><a href="Recipe_dinner.html">Dinner</a></li>
-          </ul>
-        </nav>
+  <!-- Skip link for accessibility -->
+  <a href="#main" style="position:absolute;top:-40px;left:10px;" 
+     onfocus="this.style.top='10px'">Skip to content</a>
+
+  <!-- NAVIGATION BAR -->
+  <header>
+    <div class="nav-inner container">
+      <div class="brand" style="font-weight:bold; color:var(--accent);">
+        Easy Dorm Recipes
       </div>
 
-      <div class="toggles" aria-hidden="false">
-        <label title="Increase text size" style="display:flex;align-items:center;gap:.4rem">
-          <input id="text-toggle" type="checkbox" aria-label="Toggle large text"/>
-          <span class="btn ghost" style="font-size:.85rem;padding:.35rem .6rem">A+</span>
+      <nav>
+        <ul>
+          <li><a href="Recipe_index.html">Home</a></li>
+          <li><a href="Recipe_breakfast.html">Breakfast</a></li>
+          <li><a href="Recipe_lunch.html">Lunch</a></li>
+          <li><a href="Recipe_dinner.html">Dinner</a></li>
+        </ul>
+      </nav>
+
+      <div class="toggle-row">
+        <!-- Large Text Toggle -->
+        <label>
+          <input type="checkbox" id="text-toggle">
+          <span style="padding:0.35rem 0.5rem; border:1px solid #ccc; border-radius:6px; cursor:pointer;">A+</span>
         </label>
 
-        <label class="switch" title="Toggle dark mode">
-          <input id="dark-toggle" type="checkbox" aria-label="Toggle dark mode" />
+        <!-- Dark Mode Toggle -->
+        <label class="switch">
+          <input type="checkbox" id="dark-toggle">
           <span class="slider"></span>
         </label>
       </div>
     </div>
   </header>
 
-  <main id="main" class="container" role="main">
-    <section class="hero" aria-labelledby="home-title">
+  <!-- MAIN CONTENT -->
+  <main id="main" class="container">
+
+    <!-- Hero Section -->
+    <section class="hero">
       <div class="card">
-        <h1 id="home-title">Easy Dorm Recipes — Quick, tasty, and stress-free</h1>
-        <p class="lead">Busy student life deserves delicious simplicity. Discover quick recipes designed for dorm kitchens — no fuss, minimal equipment, and under 10 minutes (mostly). Browse breakfast, lunch, or dinner ideas, check ingredients you already have, and print recipes for quick reference.</p>
-        <p class="muted">Tip: Use the ingredient tiles on each recipe page to see names on hover.</p>
+        <h1>Easy Dorm Recipes — Quick, tasty, and stress-free</h1>
+        <p class="lead">
+          No kitchen? No problem. These recipes are made for students using small dorm tools — fast, simple, and delicious. Explore breakfast, lunch, and dinner ideas that take under 10 minutes and use ingredients you already have.
+        </p>
       </div>
 
-      <div class="card" aria-hidden="false">
-        <img src="" alt="Assorted easy dishes" />
+      <div class="card">
+        <img src="Classwork/ava.png" alt="Assorted easy dishes">
       </div>
     </section>
 
-    <section class="contact-box" aria-labelledby="contact-title">
-      <h3 id="contact-title">Contact</h3>
-      <form action="#" method="post" aria-label="Contact form (placeholder)">
-        <label for="name">Name</label><br/>
-        <input id="name" style="padding:.5rem;border-radius:8px;border:1px solid rgba(0,0,0,0.08);width:100%;max-width:420px"/>
-        <label for="Email">Email</label><br/>
-        <input id="Email" style="padding:.5rem;border-radius:8px;border:1px solid rgba(0,0,0,0.08);width:100%;max-width:420px"/>
-        <label for="message">Your Thoughts?</label><br/>
-        <input id="Email" style="padding:.5rem;border-radius:8px;border:1px solid rgba(0,0,0,0.08);width:100%;max-width:420px"/>
-        <div style="margin-top:.5rem">
-          <button class="btn" type="submit">Send</button>
-        </div>
+    <!-- Contact Placeholder -->
+    <section class="card contact-box" style="margin-top:2rem;">
+      <h3>Contact</h3>
+      <form action="#" method="post">
+
+        <label for="name">Name</label>
+        <input id="name" type="text">
+
+        <label for="email">Email</label>
+        <input id="email" type="email">
+
+        <label for="message">Your Thoughts?</label>
+        <textarea id="message" rows="4"></textarea>
+
+        <button class="btn" type="submit">Send</button>
+
       </form>
     </section>
+
   </main>
 
-  <footer>
-    <small>© Easy Dorm Recipes • For educational use</small>
+  <footer class="container" style="text-align:center; margin-top:2rem; color:var(--muted);">
+    © Easy Dorm Recipes • For educational use
   </footer>
 
+  <!-- --------------------------------------------------------
+       JAVASCRIPT: dark mode + text size (saved in localStorage)
+  ------------------------------------------------------------ -->
   <script>
-    // persist and apply dark + text-size toggles
-    (function(){
-      const root = document.documentElement;
-      const darkToggle = document.getElementById('dark-toggle');
-      const textToggle = document.getElementById('text-toggle');
+    const root = document.documentElement;
+    const darkToggle = document.getElementById("dark-toggle");
+    const textToggle = document.getElementById("text-toggle");
 
-      // restore
-      const dark = localStorage.getItem('edr_dark') === 'true';
-      const large = localStorage.getItem('edr_large') === 'true';
-      if(dark) root.classList.add('dark'), darkToggle.checked = true;
-      if(large) document.body.classList.add('large-text'), textToggle.checked = true;
+    // Load saved settings on page load
+    const savedDark = localStorage.getItem("dark-mode") === "true";
+    const savedLarge = localStorage.getItem("large-text") === "true";
 
-      darkToggle.addEventListener('change', e=>{
-        if(e.target.checked) root.classList.add('dark'); else root.classList.remove('dark');
-        localStorage.setItem('edr_dark', e.target.checked);
-      });
-      textToggle.addEventListener('change', e=>{
-        if(e.target.checked) document.body.classList.add('large-text'); else document.body.classList.remove('large-text');
-        localStorage.setItem('edr_large', e.target.checked);
-      });
-    })();
+    if (savedDark) {
+      root.classList.add("dark");
+      darkToggle.checked = true;
+    }
+
+    if (savedLarge) {
+      document.body.classList.add("large-text");
+      textToggle.checked = true;
+    }
+
+    // DARK MODE
+    darkToggle.addEventListener("change", () => {
+      root.classList.toggle("dark");
+      localStorage.setItem("dark-mode", darkToggle.checked);
+    });
+
+    // LARGE TEXT
+    textToggle.addEventListener("change", () => {
+      document.body.classList.toggle("large-text");
+      localStorage.setItem("large-text", textToggle.checked);
+    });
   </script>
+
 </body>
 </html>
