--- a/Recipe_lunch.html
+++ b/Recipe_lunch.html
@@ -4,25 +4,166 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Lunch — Easy Dorm Recipes</title>
+
   <style>
-    /* reuse same theme as breakfast page */
-    :root{--bg:#fff;--card:#fff;--text:#0f1724;--muted:#6b7280;--accent:#d97706;--shadow:0 10px 30px rgba(2,6,23,0.06);--radius:12px;}
-    :root.dark{--bg:#071023;--card:#071428;--text:#e6eef8;--muted:#9aa6b2;--accent:#f59e0b;--shadow:0 10px 30px rgba(3,6,12,0.6)}
-    html,body{height:100%;margin:0;font-family:Inter,system-ui,Arial;color:var(--text);background:var(--bg)}
-    .container{max-width:1100px;margin:0 auto;padding:1rem}
-    header{position:sticky;top:0;background:var(--card);border-bottom:1px solid rgba(0,0,0,.06);z-index:40}
-    .header-inner{display:flex;align-items:center;justify-content:space-between;padding:.75rem 1rem}
-    nav ul{display:flex;gap:.5rem;list-style:none;padding:0;margin:0}
-    .recipe-layout{display:grid;grid-template-columns:1fr 420px;gap:1.25rem;align-items:start}
-    .card{background:var(--card);border-radius:12px;padding:1rem;box-shadow:var(--shadow);border:1px solid rgba(0,0,0,0.04)}
-    .ingredients-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(120px,1fr));gap:1rem;margin-top:1rem}
-    .ing-tile{position:relative;border-radius:10px;overflow:hidden;height:120px;display:flex;align-items:center;justify-content:center;background:#f3f4f6;box-shadow:var(--shadow);cursor:pointer;transition:transform .2s ease}
-    .ing-tile img{width:100%;height:100%;object-fit:cover;display:block;transform:scale(1.05);transition:transform .25s}
-    .ing-label{position:absolute;left:0;right:0;bottom:0;padding:.5rem;background:linear-gradient(180deg,transparent,rgba(0,0,0,0.55));color:white;font-weight:600;transform:translateY(110%);transition:transform .18s}
-    .ing-tile:hover .ing-label{transform:translateY(0)}
-    .ing-tile:hover img{transform:scale(1.12)}
-    @media (max-width:920px){ .recipe-layout{grid-template-columns:1fr} .recipe-img{height:260px} }
-    .btn{background:var(--accent);color:white;padding:.5rem .75rem;border-radius:8px;border:0;cursor:pointer}
+    /* -------- THEME VARIABLES -------- */
+    :root {
+      --bg: #fff;
+      --card: #fff;
+      --text: #0f1724;
+      --muted: #6b7280;
+      --accent: #d97706;
+      --shadow: 0 10px 30px rgba(2,6,23,0.06);
+      --radius: 12px;
+    }
+    :root.dark {
+      --bg: #071023;
+      --card: #071428;
+      --text: #e6eef8;
+      --muted: #9aa6b2;
+      --accent: #f59e0b;
+      --shadow: 0 10px 30px rgba(3,6,12,0.6);
+    }
+
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: Inter, system-ui, Arial;
+      color: var(--text);
+      background: var(--bg);
+    }
+
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 1rem;
+    }
+
+    header {
+      position: sticky;
+      top: 0;
+      background: var(--card);
+      border-bottom: 1px solid rgba(0,0,0,.06);
+      z-index: 40;
+    }
+
+    .header-inner {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: .75rem 1rem;
+    }
+
+    nav ul {
+      display: flex;
+      gap: .5rem;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: var(--text);
+      font-weight: 500;
+    }
+
+    nav a[aria-current="page"] {
+      color: var(--accent);
+      font-weight: 700;
+    }
+
+    .recipe-layout {
+      display: grid;
+      grid-template-columns: 1fr 420px;
+      gap: 1.25rem;
+      align-items: start;
+    }
+
+    .card {
+      background: var(--card);
+      border-radius: var(--radius);
+      padding: 1rem;
+      box-shadow: var(--shadow);
+      border: 1px solid rgba(0,0,0,0.04);
+    }
+
+    .ingredients-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+
+    .ing-tile {
+      position: relative;
+      border-radius: 10px;
+      overflow: hidden;
+      height: 120px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #f3f4f6;
+      box-shadow: var(--shadow);
+      cursor: pointer;
+      transition: transform .2s ease;
+    }
+
+    .ing-tile img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+      transform: scale(1.05);
+      transition: transform .25s;
+    }
+
+    .ing-label {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      padding: .5rem;
+      background: linear-gradient(180deg, transparent, rgba(0,0,0,0.55));
+      color: white;
+      font-weight: 600;
+      transform: translateY(110%);
+      transition: transform .18s;
+    }
+
+    .ing-tile:hover .ing-label {
+      transform: translateY(0);
+    }
+
+    .ing-tile:hover img {
+      transform: scale(1.12);
+    }
+
+    .btn {
+      background: var(--accent);
+      color: white;
+      padding: .5rem .75rem;
+      border-radius: 8px;
+      border: 0;
+      cursor: pointer;
+    }
+
+    @media (max-width:920px) {
+      .recipe-layout {
+        grid-template-columns: 1fr;
+      }
+      .recipe-img {
+        height: 260px;
+      }
+    }
+
+    .recipe-img {
+      padding: 0;
+    }
+
+    .large-text {
+      font-size: 1.15rem;
+    }
   </style>
 </head>
 <body>
@@ -39,73 +180,66 @@
           </ul>
         </nav>
       </div>
-
       <div>
-        <label title="Increase text size"><input id="text-toggle" type="checkbox" aria-label="Toggle larger text"/> A+</label>
-        <label title="Dark mode" style="margin-left:.5rem"><input id="dark-toggle" type="checkbox" aria-label="Toggle dark mode"/> Dark</label>
+        <label title="Increase text size">
+          <input id="text-toggle" type="checkbox" aria-label="Toggle larger text"/> A+
+        </label>
+        <label title="Dark mode" style="margin-left:.5rem">
+          <input id="dark-toggle" type="checkbox" aria-label="Toggle dark mode"/> Dark
+        </label>
       </div>
     </div>
   </header>
 
-  <main class="container" id="main">
+  <main class="container">
+    <!-- Chicken Salad Recipe -->
     <article class="recipe-layout card" id="chicken-salad" aria-labelledby="ch-title">
       <div>
         <h1 id="ch-title">Chicken Salad</h1>
         <div class="meta" style="color:var(--muted)">2–3 servings • 10 minutes</div>
 
-        <div>
-          <strong>Ingredients</strong>
-          <div class="ingredients-grid" id="ch-ingredients"></div>
-        </div>
+        <strong>Ingredients</strong>
+        <div class="ingredients-grid" id="ch-ingredients"></div>
 
-        <div style="margin-top:1rem">
-          <strong>Instructions</strong>
-          <ol>
-            <li>Combine chicken, mayonnaise, celery, and red onion in a bowl.</li>
-            <li>Mix until evenly combined.</li>
-            <li>Season with salt and pepper; chill or serve immediately.</li>
-          </ol>
-        </div>
+        <strong style="margin-top:1rem;display:block;">Instructions</strong>
+        <ol>
+          <li>Combine chicken, mayonnaise, celery, and red onion in a bowl.</li>
+          <li>Mix until evenly combined.</li>
+          <li>Season with salt and pepper; chill or serve immediately.</li>
+        </ol>
 
-        <div style="margin-top:1rem">
-          <button class="btn" onclick="printRecipe('chicken-salad')">Print Recipe</button>
-        </div>
+        <button class="btn" style="margin-top:1rem;" onclick="printRecipe('chicken-salad')">Print Recipe</button>
       </div>
-
-      <aside class="recipe-img card" style="padding:0">
-        <img src="https://images.unsplash.com/photo-1562967916-eb82221dfb36?q=80&w=1200&auto=format&fit=crop" alt="Chicken salad" style="width:100%;height:100%;object-fit:cover;border-radius:12px"/>
+      <aside class="recipe-img card">
+        <img src="https://images.unsplash.com/photo-1562967916-eb82221dfb36?q=80&w=1200&auto=format&fit=crop" alt="Chicken salad"/>
       </aside>
     </article>
 
+    <!-- Mozzarella Toast Recipe -->
     <article class="recipe-layout card" id="mozzarella-toast" aria-labelledby="mz-title" style="margin-top:1.25rem">
       <div>
         <h1 id="mz-title">Mozzarella Toast</h1>
         <div style="color:var(--muted)">1 serving • 5–10 minutes</div>
 
-        <div>
-          <strong>Ingredients</strong>
-          <div class="ingredients-grid" id="mz-ingredients"></div>
-        </div>
+        <strong>Ingredients</strong>
+        <div class="ingredients-grid" id="mz-ingredients"></div>
 
-        <div style="margin-top:1rem">
-          <strong>Instructions</strong>
-          <ol>
-            <li>Toast bread, top with mozzarella and pesto/oil, season, and broil until cheese melts.</li>
-          </ol>
-        </div>
+        <strong style="margin-top:1rem;display:block;">Instructions</strong>
+        <ol>
+          <li>Toast bread, top with mozzarella and pesto/oil, season, and broil until cheese melts.</li>
+        </ol>
 
-        <div style="margin-top:1rem">
-          <button class="btn" onclick="printRecipe('mozzarella-toast')">Print Recipe</button>
-        </div>
+        <button class="btn" style="margin-top:1rem;" onclick="printRecipe('mozzarella-toast')">Print Recipe</button>
       </div>
-
-      <aside class="recipe-img card" style="padding:0">
-        <img src="https://images.unsplash.com/photo-1541599540903-216a46caad36?q=80&w=1200&auto=format&fit=crop" alt="Mozzarella toast" style="width:100%;height:100%;object-fit:cover;border-radius:12px"/>
+      <aside class="recipe-img card">
+        <img src="https://images.unsplash.com/photo-1541599540903-216a46caad36?q=80&w=1200&auto=format&fit=crop" alt="Mozzarella toast"/>
       </aside>
     </article>
   </main>
 
-  <footer style="padding:1rem;text-align:center;color:var(--muted)"><small>© Easy Dorm Recipes</small></footer>
+  <footer style="padding:1rem;text-align:center;color:var(--muted)">
+    <small>© Easy Dorm Recipes</small>
+  </footer>
 
   <script>
     const RECIPES = {
@@ -143,11 +277,18 @@
       const container = document.getElementById(containerId);
       container.innerHTML = '';
       items.forEach(txt => {
-        const btn = document.createElement('button'); btn.type='button'; btn.className='ing-tile';
+        const btn = document.createElement('button');
+        btn.type = 'button';
+        btn.className = 'ing-tile';
         const key = Object.keys(ING_IMG).find(k => txt.toLowerCase().includes(k)) || 'bread';
-        const img = document.createElement('img'); img.src = ING_IMG[key]; img.alt = txt;
-        const label = document.createElement('div'); label.className='ing-label'; label.innerText = txt;
-        btn.appendChild(img); btn.appendChild(label);
+        const img = document.createElement('img');
+        img.src = ING_IMG[key];
+        img.alt = txt;
+        const label = document.createElement('div');
+        label.className = 'ing-label';
+        label.innerText = txt;
+        btn.appendChild(img);
+        btn.appendChild(label);
         btn.addEventListener('click', ()=> alert(txt));
         container.appendChild(btn);
       });
@@ -157,28 +298,43 @@
       renderIngredients('ch-ingredients', RECIPES['chicken-salad'].ingredients);
       renderIngredients('mz-ingredients', RECIPES['mozzarella-toast'].ingredients);
 
-      // toggles
       const root = document.documentElement;
       const darkToggle = document.getElementById('dark-toggle');
       const textToggle = document.getElementById('text-toggle');
+
+      // load saved preferences
       const dark = localStorage.getItem('edr_dark') === 'true';
       const large = localStorage.getItem('edr_large') === 'true';
       if(dark) root.classList.add('dark'), darkToggle.checked = true;
       if(large) document.body.classList.add('large-text'), textToggle.checked = true;
-      darkToggle.addEventListener('change', e=>{ if(e.target.checked) root.classList.add('dark'); else root.classList.remove('dark'); localStorage.setItem('edr_dark', e.target.checked); });
-      textToggle.addEventListener('change', e=>{ if(e.target.checked) document.body.classList.add('large-text'); else document.body.classList.remove('large-text'); localStorage.setItem('edr_large', e.target.checked); });
+
+      darkToggle.addEventListener('change', e=>{
+        root.classList.toggle('dark', e.target.checked);
+        localStorage.setItem('edr_dark', e.target.checked);
+      });
+
+      textToggle.addEventListener('change', e=>{
+        document.body.classList.toggle('large-text', e.target.checked);
+        localStorage.setItem('edr_large', e.target.checked);
+      });
     });
 
-    function printRecipe(id){
-      const node = document.getElementById(id);
-      if(!node) return;
-      const w = window.open('','_blank','width=700,height=900');
-      w.document.write('<!doctype html><html><head><meta charset="utf-8"><title>Print</title></head><body>');
-      w.document.write(node.innerHTML);
-      w.document.write('</body></html>');
-      w.document.close();
-      setTimeout(()=> w.print(), 300);
-    }
+   function printRecipe(id){
+  const section = document.getElementById(id);
+  const win = window.open("", "_blank", "width=700,height=900");
+
+  win.document.write(`
+    <html>
+    <head><title>Print</title></head>
+    <body style="font-family:Arial;padding:20px;">
+      ${section.innerHTML}
+    <\/body>
+    <\/html>
+  `);
+
+  win.document.close();
+  setTimeout(() => win.print(), 300);
+}
   </script>
 </body>
 </html>
